data/derived/comb/progs/unify/prog6282.ml.out
Characters 65-66:
  let base = 0 "to be implemented" in
             ^
Error: This expression has type int
       This is not a function; it cannot be applied.
